--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -6,6 +6,7 @@
     <title><%= title_tag %></title>
     <meta name="description" content="<%= meta_description %>">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <%= stylesheet_link_tag "southwest-recording" %>
   </head>
   
   <body>
