Contain to grid and pad edges.

--- a/source/layouts/interior.erb
+++ b/source/layouts/interior.erb
@@ -1,7 +1,9 @@
 <% wrap_layout :layout do %>
 
 <article>
-  <h2><%= page_title %></h2>
+  <div class="container">
+    <h2><%= page_title %></h2>
+  </div>
   <%= yield %>
 </article>
 
