--- a/source/partials/_footer.erb
+++ b/source/partials/_footer.erb
@@ -1,3 +1,5 @@
 <footer>
-  <p>&copy; <%= Time.now.year %> Southwest Recording</p>
+  <div class="container">
+    <p>&copy; <%= Time.now.year %> Southwest Recording</p>
+  </div>
 </footer>
