Add header links.

--- a/source/partials/_brand.erb
+++ b/source/partials/_brand.erb
@@ -1,5 +1,12 @@
 <header>
   <div class="container">
-    <h1>Southwest Recording</h1>
+    <h1>
+      <%= link_to "Southwest Recording", "/" %>
+    </h1>
+    <%= link_to "(719) 494-9641",
+          "tel:1-719-494-9641" %> |
+    <%= link_to "Facebook",
+          "https://www.facebook.com/southwestrecording",
+          target:"_blank" %>
   </div>
 </header>
