--- a/source/layouts/interior.erb
+++ b/source/layouts/interior.erb
@@ -2,7 +2,7 @@
 
 <article>
   <div class="container">
-    <h2><%= page_title %></h2>
+    <h2 class="page-title"><%= page_title %></h2>
   </div>
   <%= yield %>
 </article>
