Build basic nav buttons and change to grayscale.

--- a/source/partials/_nav.erb
+++ b/source/partials/_nav.erb
@@ -1,5 +1,5 @@
 <nav>
-  <ul class="container">
+  <ul class="nav-buttons">
     <li>
       <%= link_to "Audio Services", "/audio-services.html" %>
     </li>
