--- a/source/stylesheets/base/_buttons.scss
+++ b/source/stylesheets/base/_buttons.scss
@@ -40,3 +40,25 @@ button {
     }
   }
 }
+
+aside {
+  a {
+    cursor: pointer;
+    display: inline-block;
+    background: $light-gray;
+    padding: 0.6em 0.8em;
+    margin: 0.5em 0;
+    border: none;
+    border-radius: $base-border-radius;
+
+    &:hover,
+    &:focus {
+      background-color: darken($light-gray, 15%);
+    }
+
+    &:disabled {
+      cursor: not-allowed;
+      opacity: 0.5;
+    }
+  }
+}
