--- a/source/stylesheets/base/_variables.scss
+++ b/source/stylesheets/base/_variables.scss
@@ -30,7 +30,11 @@ $small-spacing: $base-spacing / 2;
 $base-z-index: 0;
 
 // Colors
-$blue: #477dca;
+$blue: #2E3192;
+$red: #BB532D;
+$soft-red: #DB7853;
+$gold: #FFC983;
+$light-gold: #FFEAD0;
 $dark-gray: #333;
 $medium-gray: #999;
 $light-gray: #ddd;
@@ -38,10 +42,10 @@ $light-gray: #ddd;
 // Font Colors
 $base-background-color: #fff;
 $base-font-color: $dark-gray;
-$action-color: $dark-gray;
+$action-color: $red;
 
 // Border
-$base-border-color: $light-gray;
+$base-border-color: $action-color;
 $base-border: 2px solid $base-border-color;
 
 // Forms
