--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -7,6 +7,8 @@
     <meta name="description" content="<%= meta_description %>">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <%= stylesheet_link_tag "southwest-recording" %>
+    <%= stylesheet_link_tag "//fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700" %>
+    <%= stylesheet_link_tag "//fonts.googleapis.com/css?family=Roboto+Slab:400" %>
   </head>
   
   <body>
