--- a/source/stylesheets/_layout.scss
+++ b/source/stylesheets/_layout.scss
@@ -15,11 +15,11 @@ header,
 footer,
 .page-title {
   text-align: center;
-  padding: 0 1em;
+  padding: 0 0.5em;
 }
 
 #logo {
-  padding: 0.8em 0.5em 0 0.5em;
+  padding-top: 1em;
 }
 
 #phone-social {
