--- a/source/stylesheets/base/_variables.scss
+++ b/source/stylesheets/base/_variables.scss
@@ -2,7 +2,16 @@
 $base-font-family: 'Open Sans', sans-serif;
 $heading-font-family: 'Roboto Slab', serif;
 
-// Font sizes
+// Small screen font sizes
+$base-small-font-size: 1.1em;
+$h1-small-font-size: 2.5em;
+$h2-small-font-size: 2.25em;
+$h3-small-font-size: 2em;
+$h4-small-font-size: 1.75em;
+$h5-small-font-size: 1.25em;
+$h6-small-font-size: 1em;
+
+// Medium(+) font sizes
 $base-font-size: 1.3em;
 $h1-font-size: 2.5em;
 $h2-font-size: 2.25em;
@@ -10,14 +19,6 @@ $h3-font-size: 2em;
 $h4-font-size: 1.75em;
 $h5-font-size: 1.25em;
 $h6-font-size: 1em;
-
-// Heading sizes on small screens
-$h1-font-reduction: em(10);
-$h2-font-reduction: em(10);
-$h3-font-reduction: em(5);
-$h4-font-reduction: em(5);
-$h5-font-reduction: 0;
-$h6-font-reduction: 0;
 
 // Font weights
 $base-font-weight: 400;
