Refine top margin of page title for a more semetric layout.

--- a/source/layouts/interior.erb
+++ b/source/layouts/interior.erb
@@ -1,7 +1,7 @@
 <% wrap_layout :layout do %>
 
 <article>
-  <h2 class="page-title"><%= page_title %></h2>
+  <h2 id="page-title"><%= page_title %></h2>
   <%= yield %>
 </article>
 
