--- a/source/stylesheets/_layout.scss
+++ b/source/stylesheets/_layout.scss
@@ -12,8 +12,7 @@ footer {
 }
 
 header,
-footer,
-.page-title {
+footer {
   text-align: center;
   padding: 0 0.5em;
 }
@@ -26,3 +25,8 @@ footer,
   padding: 0 0.5em;
 }
 
+#page-title {
+  margin-top: 0.4em;
+  padding: 0 0.5em;
+  text-align: center;
+}
