--- a/source/stylesheets/_layout.scss
+++ b/source/stylesheets/_layout.scss
@@ -30,3 +30,10 @@ footer {
   padding: 0 0.5em;
   text-align: center;
 }
+
+blockquote {
+  display: block;
+  margin: 1em;
+  border-left: $base-border;
+  padding-left: 1.5em;
+}
