--- a/source/stylesheets/base/_grid-settings.scss
+++ b/source/stylesheets/base/_grid-settings.scss
@@ -7,8 +7,9 @@
 // $max-width: em(1088);
 
 // Neat Breakpoints
-$medium-screen: em(640);
-$large-screen: em(860);
+$medium-viewport: 640px;
+$large-viewport: 860px;
 
-$medium-screen-up: new-breakpoint(min-width $medium-screen 4);
-$large-screen-up: new-breakpoint(min-width $large-screen 8);
+$medium-viewport-minus: new-breakpoint(max-width 859px 4);
+$medium-viewport-plus: new-breakpoint(min-width $medium-viewport 4);
+$large-viewport-plus: new-breakpoint(min-width $large-viewport 8);
