--- a/source/stylesheets/base/_grid-settings.scss
+++ b/source/stylesheets/base/_grid-settings.scss
@@ -4,7 +4,7 @@
 // $column: 90px;
 // $gutter: 30px;
 // $grid-columns: 12;
-// $max-width: em(1088);
+$max-width: 1400px; 
 
 // Neat Breakpoints
 $medium-viewport: 640px;
@@ -12,4 +12,6 @@ $large-viewport: 860px;
 
 $medium-viewport-minus: new-breakpoint(max-width 859px 4);
 $medium-viewport-plus: new-breakpoint(min-width $medium-viewport 4);
+$large-viewport-only: new-breakpoint(min-width $large-viewport max-width 1399px);
 $large-viewport-plus: new-breakpoint(min-width $large-viewport 8);
+$max-width-plus: new-breakpoint(min-width $max-width);
