--- a/source/layouts/interior.erb
+++ b/source/layouts/interior.erb
@@ -9,17 +9,9 @@
   <div class="container">
     <h3>Client Testimonial</h3>
     <blockquote>
+      <p>"<%= testimonial %>"</p>
       <p>
-        "...an artist, a musician, a technical wizard only begin to describe the
-        traits of this accomplished sound engineer. Allan's devotion to my
-        projects, his drive for perfection, and his consistent ability to
-        deliver one masterpiece after another, make it inconceivable to
-        consider anyone else for my National Park Audio Guides. Quite simply,
-        trying to find anyone with more talent, patience, or sense of humor
-        would be futile!"
-      </p>
-      <p>
-        <em>&#8212; Nancy Rommes, Travel Audios</em>
+        <em>&#8212; <%= client %></em>
       </p>
     </blockquote>
     <a href="#">More Testimonials</a>
