--- a/source/partials/_nav.erb
+++ b/source/partials/_nav.erb
@@ -4,7 +4,7 @@
       <%= link_to "Audio Services", "/audio-services.html" %>
     </li>
     <li>
-      <%= link_to "Demos", "/#" %>
+      <%= link_to "Audio Demos", "/audio-demos.html" %>
     </li>
     <li>
       <%= link_to "About Southwest", "/#" %>
