Build initial 'Testimonials' page.

--- a/source/layouts/interior.erb
+++ b/source/layouts/interior.erb
@@ -14,7 +14,7 @@
         <em>&#8212; <%= client %></em>
       </p>
     </blockquote>
-    <a href="#">More Testimonials</a>
+    <%= link_to "More Testimonials", "/testimonials.html" %>
   </div>
 </aside>
 
