Build initial 'About' page.

--- a/source/partials/_nav.erb
+++ b/source/partials/_nav.erb
@@ -1,16 +1,16 @@
 <nav>
   <ul class="nav-buttons">
     <li>
-      <%= link_to "Audio Services", "/audio-services.html" %>
+      <%= link_to "Services", "/audio-services.html" %>
     </li>
     <li>
-      <%= link_to "Audio Demos", "/audio-demos.html" %>
+      <%= link_to "Demos", "/audio-demos.html" %>
     </li>
     <li>
-      <%= link_to "About Southwest", "/#" %>
+      <%= link_to "About", "/about.html" %>
     </li>
     <li>
-      <%= link_to "Contact Us", "/#" %>
+      <%= link_to "Contact", "/#" %>
     </li>
   </ul>
 </nav>
