Simplify page names and URLs to single words.

--- a/source/demos.html.erb
+++ b/source/demos.html.erb
@@ -1,6 +1,6 @@
 ---
-title: Audio Demos
-meta_description: Audio Demos meta description...
+title: Demos
+meta_description: Demos meta description...
 
 layout: interior 
 ---
