--- a/source/services.html.erb
+++ b/source/services.html.erb
@@ -1,6 +1,6 @@
 ---
-title: Audio Services
-meta_description: Audio Services meta description...
+title: Services
+meta_description: Services meta description...
 
 layout: interior
 
