--- a/source/partials/_nav.erb
+++ b/source/partials/_nav.erb
@@ -1,10 +1,10 @@
 <nav>
   <ul class="nav-buttons">
     <li>
-      <%= link_to "Services", "/audio-services.html" %>
+      <%= link_to "Services", "/services.html" %>
     </li>
     <li>
-      <%= link_to "Demos", "/audio-demos.html" %>
+      <%= link_to "Demos", "/demos.html" %>
     </li>
     <li>
       <%= link_to "About", "/about.html" %>
