--- a/source/demos.html.erb
+++ b/source/demos.html.erb
@@ -19,18 +19,21 @@ layout: interior
       Services. You can rely on Allan to lend a professional voice to
       <strong>your</strong> project as well!
     </p>
-    <p>
-      (placeholder for audio player)
-    </p>
-  </div>
+
+    <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/203881750&amp;color=bb532d&amp;auto_play=false&amp;hide_related=true&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+
+    <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/203887305&amp;color=bb532d&amp;auto_play=false&amp;hide_related=true&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+
 </section>
 
 <section id="female-talent">
   <div class="container">
     <h3>Female Talent</h3>
-    <p>
-      (placeholder for audio player)
-    </p>
+
+    <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/203882627&amp;color=bb532d&amp;auto_play=false&amp;hide_related=true&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+
+    <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/205004326&amp;color=bb532d&amp;auto_play=false&amp;hide_related=true&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+
   </div>
 </section>
 
