Update 'Allan Blackwell' copy.

--- a/source/demos.html.erb
+++ b/source/demos.html.erb
@@ -9,15 +9,18 @@ layout: interior
   <div class="container">
     <h3>Allan Blackwell</h3>
     <p>
-      Allan Blackwell, Owner and Chief Operator of Southwest Recording, has been
-      in the audio business since 1973. He has won numerous awards for his
-      productions, including Addy awards from the Pikes Peak and New Mexico
+      Allan Blackwell, Owner and Chief Operator of Southwest Recording, has
+      been in the audio business for decades. He has won numerous awards for
+      his productions, including Addy awards from the Pikes Peak and New Mexico
       advertising federations, the GMC golden triangle award for best use of
       local radio, and a Telly award in conjunction with KOAA-TV in Colorado
-      Springs. You might have heard his voice on national ad campaigns for
-      Advantage Tax Resolution, Consumer Debt Relief, and Peachtree Financial
+      Springs.
+    </p>
+    <p>
+      You might have heard his voice on national ad campaigns for Advantage Tax
+      Resolution, Go-DISH, Consumer Debt Relief, and Peachtree Financial
       Services. You can rely on Allan to lend a professional voice to
-      <strong>your</strong> project as well!
+      <strong><em>your</em></strong> project as well!
     </p>
 
     <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/203881750&amp;color=bb532d&amp;auto_play=false&amp;hide_related=true&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
