Include Client Testimonial for 'Demos' page.

--- a/source/demos.html.erb
+++ b/source/demos.html.erb
@@ -2,7 +2,11 @@
 title: Demos
 meta_description: Demos meta description...
 
-layout: interior 
+layout: interior
+
+testimonial: Anything I've ever done that's won awards, national Telly's on down, has had Allan's hands on the audio. I know I can turn a project over to him and it'll come back even better than I'd planned. He's fast and thorough, and he knows his stuff! A session with him is like a walk in the park, except without all the bees and muggers.
+
+client: Trip Uhalt, KXRM/KXTU-TV
 ---
 
 <section id="allan-blackwell">
