--- a/source/demos.html.erb
+++ b/source/demos.html.erb
@@ -16,15 +16,15 @@ client: Trip Uhalt, KXRM/KXTU-TV
       Allan Blackwell, Owner and Chief Operator of Southwest Recording, has
       been in the audio business for decades. He has won numerous awards for
       his productions, including Addy awards from the Pikes Peak and New Mexico
-      advertising federations, the GMC golden triangle award for best use of
+      Advertising Federations, the GMC Golden Triangle Award for best use of
       local radio, and a Telly award in conjunction with KOAA-TV in Colorado
       Springs.
     </p>
     <p>
-      You might have heard his voice on national ad campaigns for Advantage Tax
-      Resolution, Go-DISH, Consumer Debt Relief, and Peachtree Financial
-      Services. You can rely on Allan to lend a professional voice to
-      <strong><em>your</em></strong> project as well!
+      You might have heard Allan's voice on national ad campaigns for Advantage
+      Tax Resolution, Go-DISH, Consumer Debt Relief, and Peachtree Financial
+      Services. Bottom line, you can rely on Allan Blackwell to lend a
+      professional voice to <strong><em>your</em></strong> project as well!
     </p>
 
     <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/203881750&amp;color=bb532d&amp;auto_play=false&amp;hide_related=true&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
