Edit 'About' copy.

--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -7,22 +7,33 @@ layout: interior
 
 <section id="get-it-now">
   <div class="container">
-    <h3>Get it Now</h3>
+    <h3>Profesional Background</h3>
     <ul>
-      <h4>Emergency Deadline - No Problem</h4>
       <p>
-        Very rarely do we have the luxury of a 4 or 5 day turnaround. At
-        Southwest Recording Service, we always strive to turn those emergencies
-        around as quickly as possible. It's our goal to make your life easier,
-        so next-day turnaround is typical, and same-day turnaround is not out
-        of the question!
+        Southwest Recording Service has been providing major-market audio to
+        its customers for over 20 years. Owner and chief operator Allan
+        Blackwell has been in the audio business for decades. He has won
+        numerous awards for his productions, including Addy Awards from the
+        Pikes Peak and New Mexico Advertising Federations, the GNC Golden
+        Triangle award for best use of local radio, and a Telly award in
+        conjunction with KOAA-TV in Colorado Springs.
       </p>
-      <h4>We Love Technology</h4>
       <p>
-        Upon completion of your project, we upload to Dropbox at no extra
-        charge, where you can download at your convenience. You can have your
-        finished product as quickly in Miami or Los Angeles as our local
-        clients!
+        Allan also brings considerable musical talent to his profession. He has
+        done demo recordings with Brian Mcknight, and also had the privilege of
+        editing music for such skating artists as Max Aaron, Josh Farris,
+        Rachael Flatt, Jill Trenary, Christopher Dean, Stars on Ice, Michelle
+        Kwan, Scott Davis, Renee Roca and Gorsha Sur, and Olympians Peter Breen
+        and Rachael Meyer.
+      </p>
+      <p>
+        Southwest Recording Service has produced many programs heard nationwide
+        on National Public Radio, including "Money Talks" for the American
+        Numismatic Association, "Eco Essays", also a world-wide NPR program,
+        and "60 Seconds of Sole" for Famous Footwear. We are also the exclusive
+        facility for Travel Audios, available at most of the national parks,
+        including Yellowstone, Grand Canyon, Crater Lake, Grand Tetons, Glacier,
+        and Trail Ridge Road.
       </p>
     </ul>
   </div>
