--- a/source/stylesheets/base/_lists.scss
+++ b/source/stylesheets/base/_lists.scss
@@ -1,6 +1,6 @@
 ul,
 ol {
-  list-style-type: none;
+  list-style-type: disc;
   margin: 0;
   padding: 0;
 
@@ -14,6 +14,14 @@ ol {
     list-style-type: decimal;
     margin-bottom: $small-spacing;
     padding-left: $base-spacing;
+  }
+}
+
+article {
+  ul,
+  ol {
+    margin: -2em 0 0 0;
+    padding: 1em;
   }
 }
 
