Break apart 'About' sections and add testimonial.

--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -2,13 +2,16 @@
 title: About
 meta_description: About meta description...
 
-layout: interior 
+layout: interior
+
+testimonial: Colorado Springs Marketing has been using the wonderful audio production of Allan and Southwest Recording for over 17 years. They are very creative in copywriting and production, and we have always been extremely happy with their care for our clients. Their businesses continue to grow, and Southwest Recording has been a big part of making that happen.
+
+client: Sandra Noll, Colorado Springs Marketing
 ---
 
-<section id="get-it-now">
+<section id="profesional-background">
   <div class="container">
     <h3>Profesional Background</h3>
-    <ul>
       <p>
         Southwest Recording Service has been providing major-market audio to
         its customers for over 20 years. Owner and chief operator Allan
@@ -18,6 +21,12 @@ layout: interior
         Triangle award for best use of local radio, and a Telly award in
         conjunction with KOAA-TV in Colorado Springs.
       </p>
+  </div>
+</section>
+
+<section id="musical-talent">
+  <div class="container">
+    <h3>Musical Talent</h3>
       <p>
         Allan also brings considerable musical talent to his profession. He has
         done demo recordings with Brian Mcknight, and also had the privilege of
@@ -26,6 +35,12 @@ layout: interior
         Kwan, Scott Davis, Renee Roca and Gorsha Sur, and Olympians Peter Breen
         and Rachael Meyer.
       </p>
+  </div>
+</section>
+
+<section id="national-presence">
+  <div class="container">
+    <h3>National Presence</h3>
       <p>
         Southwest Recording Service has produced many programs heard nationwide
         on National Public Radio, including "Money Talks" for the American
@@ -35,16 +50,19 @@ layout: interior
         including Yellowstone, Grand Canyon, Crater Lake, Grand Tetons, Glacier,
         and Trail Ridge Road.
       </p>
-    </ul>
   </div>
 </section>
 
 <section id="equipment">
   <div class="container">
-    <h3>Equipment</h3>
+    <h3>Top-Notch Equipment</h3>
     <p>
-      (placeholder for equipment list)
+      Southwest Recording Service uses nothing short of the highest quality
+      recording and editing equipment available. Our inventory includes...
     </p>
+    <%= link_to "Complete Equipment List",
+                "/equipment.html",
+                class: "button" %>
   </div>
 </section>
 
