--- a/source/testimonials.html.erb
+++ b/source/testimonials.html.erb
@@ -48,7 +48,7 @@ layout: testimonial
         "Colorado Springs Marketing has been using the wonderful audio
         production of Allan and Southwest Recording for over 17 years. They are
         very creative in copywriting and production, and we have always been
-        extremely happy with his care for our clients. Their businesses
+        extremely happy with their care for our clients. Their businesses
         continue to grow, and Southwest Recording has been a big part of making
         that happen."
       </p>
