Drop in copy for 'Services' page.

--- a/source/services.html.erb
+++ b/source/services.html.erb
@@ -13,14 +13,11 @@ client: Nancy Rommes, Travel Audios
   <div class="container">
     <h3>Radio and TV Ads</h3>
     <p>
-      Lorem ipsum dolor sit amet, consectetur <strong>adipisicing elit</strong>,
-      sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-      enim ad minim veniam, quis nostrud <em>exercitatio</em> ullamco laboris
-      nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-      reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-      pariatur.
+      We have a very substantial talent base, allowing us to find the best
+      voiceover talent, male or female, for your project. We also have access
+      to numerous music and sound effects libraries. And remember, quick
+      turnaround is never a problem!
     </p>
-    <p>I am a second paragraph.</p>
   </div>
 </section>
 
@@ -28,12 +25,15 @@ client: Nancy Rommes, Travel Audios
   <div class="container">
     <h3>TV Promos</h3>
     <p>
-      Lorem ipsum dolor sit amet, <em>consectetur</em> adipisicing elit, sed do
-      eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-      minim veniam, quis nostrud exercitation ullamco <strong>laboris</strong>
-      nisi ut aliquip ex commodo consequat. Duis aute irure dolor in
-      reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-      pariatur.
+      TV Image Liners and Promos Take advantage of the same quick, no-hassle
+      service as our commercial clients. We will get your liners back to you
+      almost always on the same day*. Always multiple takes, no false takes to
+      weed thru. Plus very flexible terms...your choice of one flat
+      monthly fee or per-line, whichever works best.
+    </p>
+    <p>
+      *Please note this applies to Allan's voice only since he is always here.
+      Other talents also available but typically by schedule only.
     </p>
   </div>
 </section>
@@ -42,11 +42,10 @@ client: Nancy Rommes, Travel Audios
   <div class="container">
     <h3>Jingles</h3>
     <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-      veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-      commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-      velit esse cillum dolore eu fugiat nulla pariatur.    
+      Nothing establishes your identity like your own jingle, and it doesn't
+      have to empty your pocketbook! We have access to some of the best writers
+      and musicians in the industry, and can create a jingle for your company
+      in any style imaginable.
     </p>
   </div>
 </section>
@@ -55,11 +54,23 @@ client: Nancy Rommes, Travel Audios
   <div class="container">
     <h3>OnHold/Phone Prompts</h3>
     <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-      veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-      commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-      velit esse cillum dolore eu fugiat nulla pariatur.
+      What do your customers hear when you put them on hold? Nothing?
+    </p>
+    <p>
+      ("I wonder if they forgot me....")<br>
+      The Radio?<br>
+      ("What if they hear an ad from one of my competitors?")<br> 
+      With a custom on-hold message from Southwest Recording Service, your
+      clients hear what you want them to hear...tell them more about your
+      business, or current specials...driving directions...all wrapped up in
+      the style of music that best fits your customers! We can provide the
+      playback hardware, or if you already have a system, we can provide you
+      with the correct media. 
+    </p>
+    <p>
+      Make sure your clients hear what <strong>you</strong> want them to hear
+      when you place them on hold with an on-hold system from Southwest
+      Recording Service.
     </p>
   </div>
 </section>
@@ -68,11 +79,9 @@ client: Nancy Rommes, Travel Audios
   <div class="container">
     <h3>Music Recording/Editing</h3>
     <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-      veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-      commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-      velit esse cillum dolore eu fugiat nulla pariatur.
+      Whether you're a skater, gymnast, or dancer, we know how important it is
+      for your music to fit your routine. We've helped numerous performers
+      customize their music to perfectly compliment their specific talents!
     </p>
   </div>
 </section>
