Embed 'Service' tracks from SoundCloud.

--- a/source/services.html.erb
+++ b/source/services.html.erb
@@ -18,6 +18,9 @@ client: Nancy Rommes, Travel Audios
       to numerous music and sound effects libraries. And remember, quick
       turnaround is never a problem!
     </p>
+
+    <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/203881941&amp;color=bb532d&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+
   </div>
 </section>
 
@@ -31,6 +34,9 @@ client: Nancy Rommes, Travel Audios
       weed thru. Plus very flexible terms...your choice of one flat
       monthly fee or per-line, whichever works best.
     </p>
+
+    <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/205006299&amp;color=bb532d&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+
     <p>
       *Please note this applies to Allan's voice only since he is always here.
       Other talents also available but typically by schedule only.
@@ -47,6 +53,9 @@ client: Nancy Rommes, Travel Audios
       and musicians in the industry, and can create a jingle for your company
       in any style imaginable.
     </p>
+
+    <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/203882093&amp;color=bb532d&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+
   </div>
 </section>
 
@@ -56,10 +65,10 @@ client: Nancy Rommes, Travel Audios
     <p>
       What do your customers hear when you put them on hold? Nothing?
     </p>
+
+    <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/206215897&amp;color=bb532d&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+
     <p>
-      ("I wonder if they forgot me....")<br>
-      The Radio?<br>
-      ("What if they hear an ad from one of my competitors?")<br> 
       With a custom on-hold message from Southwest Recording Service, your
       clients hear what you want them to hear...tell them more about your
       business, or current specials...driving directions...all wrapped up in
@@ -68,8 +77,8 @@ client: Nancy Rommes, Travel Audios
       with the correct media. 
     </p>
     <p>
-      Make sure your clients hear what <strong>you</strong> want them to hear
-      when you place them on hold with an on-hold system from Southwest
+      Make sure your clients hear what <strong><em>you</em></strong> want them
+      to hear when you place them on hold with an on-hold system from Southwest
       Recording Service.
     </p>
   </div>
