--- a/source/services.html.erb
+++ b/source/services.html.erb
@@ -63,7 +63,7 @@ client: Nancy Rommes, Travel Audios
   <div class="container">
     <h3>OnHold/Phone Prompts</h3>
     <p>
-      What do your customers hear when you put them on hold? Nothing?
+      What do your customers hear when you put them on hold?
     </p>
 
     <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/206215897&amp;color=bb532d&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
