Add parallax studio photo to home page.

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,5 +1,26 @@
 ---
 
 ---
+<div id="studio" class="parallax">
+</div>
 
-<h2>Index</h2>
+<div class="container">
+  
+  <h2 class="feature">
+    A <em>Sound</em> Part of Your Success
+  </h2>
+
+  <p>
+    <%= lorem.sentences 7 %>
+  </p>
+  <p>
+    <%= lorem.sentences 7 %>
+  </p>
+  <p>
+    <%= lorem.sentences 7 %>
+  </p>
+  <p>
+    <%= lorem.sentences 7 %>
+  </p>
+
+</div>
