--- a/source/equipment.html.erb
+++ b/source/equipment.html.erb
@@ -5,201 +5,325 @@ meta_description: Equipment meta description...
 layout: testimonial 
 ---
 
-<section id="equipment">
+<section>
   <div class="container">
 
-<h3>RECORDING CONSOLE</h3>
+<h3>Recording Console</h3>
 
 <ul>
-<li>MACKIE 8-BUS, 48 INPUTS</li>
-<li>STUDIO TECHNOLOGIES 68A/69A MONITOR CONTROLLER</li>
-</ul>
-
-<h3>MAIN RECORDING SYSTEM</h3>
-
-<ul>
-<li>PRO TOOLS 10 + PRO TOOLS 11 HD</li>
-<li>WINDOWS 7 64-BIT ULTIMATE</li>
-<li>DIGI 003 CONTROL SURFACE</li>
-</ul>
-
-<h3>PLUGINS</h3>
-
-<ul>
-<li>UNIVERSAL AUDIO OCTO and SOLO DSP CARDS</li>
-<li>API VISION CHANNEL STRIP</li>
-<li>SSL G SERIES</li>
-<li>CS1 CHANNEL STRIP</li>
-<li>DBX 160VU</li>
-<li>1176 COLLECTION</li>
-<li>LA2A</li>
-<li>LEXICON 224 REVERB</li>
-<li>EMT 140 PLATE REVERB</li>
-<li>EMT 250 REVERB</li>
-<li>LITTLE-LABS IBP</li>
-<li>PULTEC PRO</li>
-<li>FAIRCHILD 670</li>
-<li>LITTLE LABS VOICE OF GOD</li>
-<li>NEVE 1073</li>
-<li>NEVE 88RS</li>
-<li>PRECISION DE-ESSER</li>
-<li>PRECISION HZ</li>
-<li>PRECISION LIMITER</li>
-<li>PULTEC EQP&#8211;1A</li>
-<li>PULTEC PRO EQ</li>
-<li>SHADOW HILLS MASTERING COMPRESSOR</li>
-<li>STUDER A800</li>
-<li>UA&#8211;610B</li>
-<li>NOMAD FACTORY</li>
-<li>BBE SONIC SUITE</li>
-<li>ESSENTIALSTUDIO COLLECTION</li>
-<li>COSMOS</li>
-<li>ECHOES</li>
-<li>MAGNETIC II</li>
-<li>SOFTUBE</li>
-<li>SUMMIT AUDIO GRAND CHANNEL</li>
-<li>FET COMPRESSOR</li>
-<li>LEXICON</li>
-<li>MPX NATIVE REVERB</li>
-<li>LXP NATIVE REVERB BUNDLE</li>
-<li>EVENTIDE</li>
-<li>OMNIPRESSOR</li>
-<li>2016 STEREO ROOM REVERB</li>
-<li>ULTRA REVERB</li>
-<li>ULTRA CHANNEL</li>
-<li>FLUX</li>
-<li>BITTERSWEET</li>
-</ul>
-
-<h3>WAVE ARTS</h3>
-
-<ul>
-<li>TRACK PLUG 5</li>
-<li>MULTI-DYNAMICS</li>
-<li>PANORAMA</li>
-<li>MASTERVERB 5</li>
-<li>FINAL PLUG</li>
-<li>ANTARES</li>
-<li>AUTO TUNE 7</li>
-<li>MIC MOD</li>
-<li>DUO</li>
-<li>PLUG AND MIX</li>
-<li>ENTIRE PLUG AND MIX COLLECTION</li>
-<li>FAB FILTER</li>
-<li>PRO Q2</li>
-<li>PRO L</li>
-<li>MINNETONKA</li>
-<li>DOLBY PRO-LOGIC II SURCODE</li>
-<li>MAAG AUDIO</li>
-<li>EQ2</li>
-<li>SONNOX</li>
-<li>TRANSIENT MODULATOR</li>
-</ul>
-
-<h3>SLATE DIGITAL</h3>
-
-<ul>
-<li>VIRTUAL BUSS COMPRESSOR</li>
-<li>LINDELL AUDIO</li>
-<li>TX500 COMPRESSOR</li>
-<li>McDSP</li>
-<li>6030 ULTIMATE COMPRESSOR</li>
-<li>METRIC HALO</li>
-<li>CHANNEL STRIP</li>
-<li>THUMP</li>
-<li>TRANSIENT DESIGNER</li>
-<li>PSP</li>
-<li>XENON</li>
-<li>SPL</li>
-<li>TWIN TUBE</li>
-<li>IK MULTIMEDIA</li>
-<li>AMPLITUBE 3</li>
-<li>T-RACKS CHANNEL STRIP</li>
-<li>T-RACKS EQ</li>
-<li>T-RACKS METERING</li>
-<li>BLUE CAT AUDIO</li>
-<li>CHORUS</li>
-<li>DP METER</li>
-<li>PATCHWORK</li>
-<li>FLANGER</li>
-<li>FREQUANALYST</li>
-<li>GAIN</li>
-<li>PHASER</li>
-<li>TRIPLE EQ</li>
-</ul>
-
-<h3>PLUS ALL STOCK DIGI/AVID PLUGINS</h3>
-
-<ul>
-<li>OUTBOARD GEAR</li>
-<li>PREAMPS</li>
-<li>ART PROCHANNEL</li>
-<li>ART MPA PRO II</li>
-<li>JOE MEEK VC1Q</li>
-<li>JOE MEEK VC6</li>
-<li>BBE 381 GUITAR PREAMP (2)</li>
-<li>COMPRESSORS</li>
-<li>DBX 1066</li>
-<li>DBX 160A</li>
-<li>DBX 903 (4)</li>
-<li>VALLEY PEOPLE DYNA-MITE</li>
-<li>JOE MEEK SC2.2</li>
-<li>REVERB</li>
-<li>YAMAHA REV 500</li>
-<li>LEXICON MX200</li>
-<li>OTHER</li>
-<li>BBE 882i (3)</li>
-<li>DBX 120</li>
-<li>ENSONIQ ASR&#8211;10 SAMPLER/SEQUENCER</li>
-<li>ALESIS DM-PRO DRUM MODULE</li>
-</ul>
-
-<h3>MICROPHONES</h3>
-
-<ul>
-<li>AKG SOLID TUBE</li>
-<li>GROOVE TUBES MD&#8211;1 (2)</li>
-<li>AT 4033 (2)</li>
-<li>AKG C&#8211;1000S (2)</li>
-<li>EQUITEK E&#8211;100</li>
-<li>JOE MEEK JM27 (2)</li>
-<li>EV RE&#8211;20 (2)</li>
-<li>SM57 (3)</li>
-<li>ATM 23HE</li>
-<li>ATM 25</li>
-<li>AUDIX D6</li>
-<li>BEYER M500 (2)</li>
-</ul>
-
-<h3>OTHER RECORDING DEVICES</h3>
-
-<ul>
-<li>TASCAM DA88 (3)</li>
-<li>FOSTEX E&#8211;2 1/4&quot; REEL TO REEL</li>
-<li>SONY PCM2300 DAT</li>
-<li>TASCAM 112B CASSETTE</li>
-</ul>
-
-<h3>CD AUTHORING SOFTWARE</h3>
-
-<ul>
-<li>NERO</li>
-<li>ROXIO</li>
-<li>SONY CD ARCHITECT</li>
-</ul>
-
-<h3>MONITORING EQUIPMENT</h3>
-
-<ul>
-<li>MAINS:</li>
-<li>JBL 4410</li>
-<li>CUSTOM BUILT 15” TWIN CHAMBER ISOBARIK SUBS</li>
-<li>ALESIS M1 ACTIVE NEARFILEDS</li>
-<li>JBL 6208 SURROUNDS</li>
-<li>YAMAHA NS-A635 CENTERS</li>
-<li>STUDIO TECHNOLOGIES 68A/69A MONITOR CONTROLLER</li>
+<li>Mackie 8-Bus, 48 Inputs</li>
+<li>Studio Technologies 68A/69A Monitor Controller</li>
 </ul>
 
   </div>
 </section>
 
+<section>
+  <div class="container">
+
+<h3>Main Recording System</h3>
+
+<ul>
+<li>Pro Tools 10 HD + Pro Tools 11 HD</li>
+<li>Windows 7 64-Bit Ultimate</li>
+<li>Digi 003 Control Surface</li>
+</ul>
+
+  </div>
+</section>
+
+<section>
+  <div class="container">
+    
+<h3>Plugins</h3>
+
+<h4>Universal Audio</h4>
+
+<ul>
+<li>Octo and Solo DSP Cards</li>
+<li>API Vision Channel Strip</li>
+<li>SSL G Series</li>
+<li>CS1 Channel Strip</li>
+<li>DBX 160 VU</li>
+<li>1176 Collection</li>
+<li>LA2A</li>
+<li>Lexicon 224 Reverb</li>
+<li>EMT 140 Plate Reverb</li>
+<li>EMT 250 Reverb</li>
+<li>Little-Labs IBP</li>
+<li>Pultec Pro</li>
+<li>Fairchild 670</li>
+<li>Little Labs Voice of God</li>
+<li>Neve 1073</li>
+<li>Neve 88RS</li>
+<li>Precision De-Esser</li>
+<li>Precision Hz</li>
+<li>Precision Limiter</li>
+<li>Pultec EQP-1A</li>
+<li>Pultec Pro EQ</li>
+<li>Shadow Hills Mastering Compressor</li>
+<li>Studer A800</li>
+<li>UA-610B</li>
+</ul>
+
+<h4>Nomad Factory</h4>
+
+<ul>
+<li>BBE Sonic Suite</li>
+<li>Essential Studio Collection</li>
+<li>Cosmos</li>
+<li>Echoes</li>
+<li>Magnetic II</li>
+</ul>
+
+<h4>Softube</h4>
+
+<ul>
+<li>Summit Audio Grand Channel</li>
+<li>Fet Compressor</li>
+</ul>
+
+<h4>Lexicon</h4>
+
+<ul>
+<li>MPX Native Reverb</li>
+<li>LXP Native Reverb Bundle</li>
+</ul>
+
+<h4>Eventide</h4>
+
+<ul>
+<li>Omnipressor</li>
+<li>2016 Stereo Room Reverb</li>
+<li>Ultra Reverb</li>
+<li>Ultra Channel</li>
+</ul>
+
+<h4>Flux</h4>
+
+<ul>
+<li>Bittersweet</li>
+</ul>
+
+<h4>Wave Arts</h4>
+
+<ul>
+<li>Track Plug 5</li>
+<li>Multi-Dynamics</li>
+<li>Panorama</li>
+<li>Masterverb 5</li>
+<li>Final Plug</li>
+</ul>
+
+<h4>Antares</h4>
+
+<ul>
+<li>Auto Tune 7</li>
+<li>Mic Mod</li>
+<li>Duo</li>
+</ul>
+
+<h4>Plug and Mix</h4>
+
+<ul>
+<li>Entire Plug and Mix Collection</li>
+</ul>
+
+<h4>Fab Filter</h4>
+
+<ul>
+<li>Pro Q2</li>
+<li>Pro L</li>
+</ul>
+
+<h4>Minnetonka</h4>
+
+<ul>
+<li>Dolby Pro-Logic II Surcode</li>
+</ul>
+
+<h4>Maag Audio</h4>
+
+<ul>
+<li>EQ2</li>
+</ul>
+
+<h4>Sonnox</h4>
+
+<ul>
+<li>Transient Modulator</li>
+</ul>
+
+<h4>Slate Digital</h4>
+
+<ul>
+<li>Virtual Buss Compressor</li>
+</ul>
+
+<h4>Lindell Audio</h4>
+
+<ul>
+<li>TX500 Compressor</li>
+</ul>
+
+<h4>MCDSP</h4>
+
+<ul>
+<li>6030 Ultimate Compressor</li>
+</ul>
+
+<h4>Metric Halo</h4>
+
+<ul>
+<li>Channel Strip</li>
+<li>Thump</li>
+<li>Transient Designer</li>
+</ul>
+
+<h4>PSP</h4>
+
+<ul>
+<li>Xenon</li>
+</ul>
+
+<h4>SPL</h4>
+
+<ul>
+<li>Twin Tube</li>
+</ul>
+
+<h4>IK Multimedia</h4>
+
+<ul>
+<li>Amplitube 3</li>
+<li>T-Racks Channel Strip</li>
+<li>T-Racks EQ</li>
+<li>T-Racks Metering</li>
+</ul>
+
+<h4>Blue Cat Audio</h4>
+
+<ul>
+<li>Chorus</li>
+<li>Dp Meter</li>
+<li>Patchwork</li>
+<li>Flanger</li>
+<li>Frequanalyst</li>
+<li>Gain</li>
+<li>Phaser</li>
+<li>Triple Eq</li>
+</ul>
+
+<h4>Plus All Stock Digi/Avid Plugins</h4>
+
+  </div>
+</section>
+
+<section>
+  <div class="container">
+    
+<h3>Outboard Gear</h3>
+
+<h4>Preamps</h4>
+
+<ul>
+<li>Art Prochannel</li>
+<li>Art Mpa Pro II</li>
+<li>Joe Meek VC1Q</li>
+<li>Joe Meek VC6</li>
+<li>BBE 381 Guitar Preamp (2)</li>
+</ul>
+
+<h4>Compressors</h4>
+
+<ul>
+<li>DBX 1066</li>
+<li>DBX 160A</li>
+<li>DBX 903 (4)</li>
+<li>Valley People Dyna-Mite</li>
+<li>Joe Meek SC2.2</li>
+</ul>
+
+<h4>Reverb</h4>
+
+<ul>
+<li>Yamaha REV500</li>
+<li>Lexicon MX200</li>
+</ul>
+
+<h4>Other</h4>
+
+<ul>
+<li>BBE 882I (3)</li>
+<li>DBX 120</li>
+<li>Ensoniq ASR-10 Sampler/Sequencer</li>
+<li>Alesis DM-Pro Drum Module</li>
+</ul>
+
+  </div>
+</section>
+
+<section>
+  <div class="container">
+    
+<h3>Microphones</h3>
+
+<ul>
+<li>AKG Solid Tube</li>
+<li>Groove Tubes MD-1 (2)</li>
+<li>AT 4033 (2)</li>
+<li>AKG C-1000s (2)</li>
+<li>Equitek E-100</li>
+<li>Joe Meek Jm27 (2)</li>
+<li>EV Re-20 (2)</li>
+<li>SM57 (3)</li>
+<li>ATM 23HE</li>
+<li>ATM 25</li>
+<li>Audix D6</li>
+<li>Beyer M500 (2)</li>
+</ul>
+
+<h3>Other Recording Devices</h3>
+
+<ul>
+<li>Tascam Da88 (3)</li>
+<li>Fostex E-2  1/4" Reel-to-Reel</li>
+<li>Sony PCM2300 DAT</li>
+<li>Tascam 112b Cassette</li>
+</ul>
+
+  </div>
+</section>
+
+<section>
+  <div class="container">
+    
+<h3>CD Authoring Software</h3>
+
+<ul>
+<li>Nero</li>
+<li>Roxio</li>
+<li>Sony CD Architect</li>
+</ul>
+
+  </div>
+</section>
+
+<section>
+  <div class="container">
+
+  <h3>Monitoring Equipment</h3>
+
+  <h4>Mains:</h4>
+
+  <ul>
+  <li>JBL 4410</li>
+  <li>Custom Built 15” Twin Chamber Isobarik Subs</li>
+  <li>Alesis M1 Active Nearfileds</li>
+  <li>JBL 6208 Surrounds</li>
+  <li>Yamaha NS-A635 Centers</li>
+  <li>Studio Technologies 68A/69A Monitor Controller:</li>
+  </ul>
+    
+  </div>
+</section>
