Add 2 new parallax images to 'Home' page.

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -13,14 +13,33 @@
   <p>
     <%= lorem.sentences 7 %>
   </p>
-  <p>
-    <%= lorem.sentences 7 %>
-  </p>
-  <p>
-    <%= lorem.sentences 7 %>
-  </p>
+
+</div>
+
+<div id="mic" class="parallax">
+</div>
+
+<div class="container">
+
+  <h2 class="feature">
+    Second Marketing Statement
+  </h2>
+
   <p>
     <%= lorem.sentences 7 %>
   </p>
 
+</div>
+
+<div id="levels" class="parallax">
+</div>
+
+<div class="container">
+
+  <h2 class="feature">
+    Third Marketing Statement
+  </h2>
+  
+  <p>
+    <%= lorem.sentences 7 %>
 </div>
