--- a/source/stylesheets/_parallax.scss
+++ b/source/stylesheets/_parallax.scss
@@ -14,3 +14,11 @@
 #studio {
   background-image: url(/images/studio-2354.jpg);
 }
+
+#mic {
+  background-image: url(/images/mic-2440.jpg);
+}
+
+#levels {
+  background-image: url(/images/levels-2437.jpg);
+}
