Drop in home copy.

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -7,11 +7,24 @@
 <div class="container">
   
   <h2 class="feature">
-    A <em>Sound</em> Part of Your Success
+    Amazing Quality, Quick Turnaround<br>
+    Competitive Pricing
   </h2>
 
+  <p class="feature">
+    <strong>
+      You have heard the old axiom: “Speed, price, quality. Pick any two.”
+    </strong>
+  </p>
+
   <p>
-    <%= lorem.sentences 7 %>
+    At Southwest Recording Service, you will get the best-sounding product in
+    the business, usually delivered the same business day, but at a
+    refreshingly affordable price.
+    We utilize the industry’s best hardware and software, and back it up with
+    in-depth  knowledge of how to put it all to work for you. Whether it is a
+    national commercial campaign, an on-hold message for your phone, or an
+    attention-grabbing custom jingle, we are ready to meet your audio needs. 
   </p>
 
 </div>
@@ -22,26 +35,17 @@
 <div class="container">
 
   <h2 class="feature">
-    Second Marketing Statement
+    A <em>Sound</em> Part of Your Success
   </h2>
 
-  <p>
-    <%= lorem.sentences 7 %>
+  <p class="feature">
+    <strong>Sound:</strong> <em>(n)</em> the sensation experienced through the
+    sense of hearing;<br>
+    a particular auditory impression<br>
+    <em>(adj)</em> solid, firm, stable, free from flaws or defects
   </p>
 
 </div>
 
 <div id="levels" class="parallax">
-</div>
-
-<div class="container">
-
-  <h2 class="feature">
-    Third Marketing Statement
-  </h2>
-  
-  <p>
-    <%= lorem.sentences 7 %>
-  </p>
-
 </div>
