--- a/source/stylesheets/_parallax.scss
+++ b/source/stylesheets/_parallax.scss
@@ -1,5 +1,5 @@
 .parallax {
-  background-attachment: fixed;
+  // background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
