--- a/source/partials/_footer.erb
+++ b/source/partials/_footer.erb
@@ -16,6 +16,9 @@
           <%= link_to "About", "/about.html" %>
         </li>
         <li>
+          <%= link_to "Testimonials", "/testimonials.html" %>
+        </li>
+        <li>
           <%= link_to "Contact", "/contact.html" %>
         </li>
       </ul>
