Update contact page with additional content.

--- a/source/contact.html.erb
+++ b/source/contact.html.erb
@@ -13,7 +13,9 @@ client: Ann Martin, Idea Bank Marketing
   <div class="container">
     <h3>Reach us by</h3>
       <p>email: allan@southwestrecording.com</p>
-      <p>phone: (719) 494-9641</p>
+      <p>phone: (719) 633-7335</p>
+      <p>cell: (719) 494-9641</p>
+      <p>fax: (719) 633-7338</p>
       <p>facebook:
       <%= link_to "Southwest Recording Facebook Page",
           "https://www.facebook.com/southwestrecording",
@@ -21,9 +23,3 @@ client: Ann Martin, Idea Bank Marketing
       </p>
   </div>
 </section>
-
-<!-- <section id="map">
-  <div class="container">
-    Placeholder for Google Map
-  </div>
-</section> -->
